tests/ui/traits/const-traits/non-const-op-const-closure-non-const-outer.stderr
error[E0277]: the trait bound `{closure@$DIR/non-const-op-const-closure-non-const-outer.rs:13:6: 13:14}: [const] Fn()` is not satisfied
  --> $DIR/non-const-op-const-closure-non-const-outer.rs:13:5
   |
LL |     (const || { (()).foo() })();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
